2008-12-16 Ingo Renner  <ingo@typo3.org>

	* fixed a bug were the LLL view helper would retrieve an overwrite label from TS, but would not use it correctly

2008-12-15 Frank Naegler  <typo3@naegler.net>

	* change some SQL in userGateway, to fix correct matching friend relations

2008-12-14 Frank Naegler  <typo3@naegler.net>

	* adding hint after saving in the Privacy application.

2008-12-12 Frank Naegler  <typo3@naegler.net>

	* adding ACL support for MyFriends-Widget, MyGroups-Widget and LastVisitors-Widget

2008-12-06 Frank Naegler  <typo3@naegler.net>

	* adding support for location hash in redirect to editGroup

2008-12-05 Frank Naegler  <typo3@naegler.net>

	* adding method findUnconfirmedFriends to the userGateway, we need this to identify unconfirmed friend requests.

2008-12-03 Frank Naegler  <typo3@naegler.net>

	* adding pagebrowser to groupList

2008-12-02 Frank Naegler  <typo3@naegler.net>

	* adding new widget: MyFriends for the userProfile
	* bugfix for empty request in tx_community_controller_SearchApplication->searchAction
	* check of existing where clause in tx_community_model_UserGateway->findByWhereClause to prepend SQL errors

2008-12-01 Frank Naegler  <typo3@naegler.net>

	* refactoring of tx_community_controller_userprofile_ProfileActionsWidget: use the class instance of localizationManager instead initialize it in every method

2008-11-25 Ingo Renner  <ingo@typo3.org>

	* moved the logging part of the last visitors widget into an own widget
	* added support for the numberOfLastVisitorsToLog configuration option in the user profile visitor logger
	* stopped the user profile visitors logger from logging visits from anonymous users
	* changed the abstract community application widget's getConfiguration() method to return the widget's configuration instead of the whole community configuration
	* added a helper to show information about a plugin in the backend's page module
	* added a widget to show a user's status message
